Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,14 @@ steps:
     displayName: "Install prerequisites"
 
   - script: |
+      INSTALL_DIR="/usr/local/bin"
+      json=$(curl -s https://api.github.com/repos/mozilla/geckodriver/releases/latest)
+      url=$(echo "$json" | jq -r '.assets[].browser_download_url | select(contains("linux64"))')
+      curl -s -L "$url" | tar -xz
+      chmod +x geckodriver
+      sudo mv geckodriver "$INSTALL_DIR"
+
+  - script: |
       pushd '$(projectRoot)'
       pip install pytest-cov
       pytest --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
