--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,7 +55,7 @@ steps:
   - script: |
       pushd '$(projectRoot)'
       pip install pytest-cov
-      pytest -v -m "not functest" --no-xvfb --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+      pytest -v -m "not functest" --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
     displayName: "Run unit tests with pytest"
 
   - script: |
