--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = superlists.settings
 python_files = tests.py test_*.py *_tests.py
+markers = 
+    functest: Functional test
