wrote functest for case when two different users visit site, moved functests to pytest-selenium and driver-factory

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,4 @@ DJANGO_SETTINGS_MODULE = superlists.settings
 python_files = tests.py test_*.py *_tests.py
 markers = 
     functest: Functional test
+addopts = --driver=Firefox
