--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,12 @@ appdirs==1.4.3
 atomicwrites==1.3.0
 attrs==19.3.0
 black==19.10b0
+certifi==2020.12.5
+chardet==4.0.0
 Click==7.0
 colorama==0.4.3
 Django==1.11.27
+idna==2.10
 more-itertools==8.1.0
 packaging==20.0
 pathspec==0.7.0
@@ -12,11 +15,18 @@ pluggy==0.13.1
 py==1.8.1
 pyparsing==2.4.6
 pytest==5.3.3
+pytest-base-url==1.4.2
 pytest-django==3.8.0
+pytest-html==3.1.1
+pytest-metadata==1.11.0
+pytest-selenium==2.0.1
+pytest-variables==1.9.0
 pytz==2019.3
 regex==2020.1.8
+requests==2.25.1
 selenium==3.141.0
 six==1.14.0
+tenacity==6.3.1
 toml==0.10.0
 typed-ast==1.4.1
 urllib3==1.25.7
