Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,6 +47,11 @@ steps:
       pip install pytest-cov
       pytest -v -m "not functest" --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
     displayName: "Run unit tests with pytest"
+  
+  - script: |
+      pushd '$(projectRoot)'
+      pytest -v -m functest
+    displayName: "Run functional tests"
 
   - task: PublishTestResults@2
     inputs:
