--- a/.github/workflows/func-test.yml
+++ b/.github/workflows/func-test.yml
@@ -1,10 +1,10 @@
-name: Unit tests
+name: Functional tests
 
 on:
   push:
-    branches: [ "*" ]
+    branches: [ master ]
   pull_request:
-    branches: [ "*" ]
+    branches: [ master ]
 
 jobs:
   build:
@@ -25,6 +25,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        chmod +x ./scripts/InstallChrome.sh
+        ./scripts/InstallChrome.shd
     - name: Run Tests
       run: |
-        pytest -m "not functest"
+        pytest -m functest
