added step to run migrations before starting functional tests

--- a/.github/workflows/func-test.yml
+++ b/.github/workflows/func-test.yml
@@ -40,6 +40,8 @@ jobs:
         sudo apt install firefox
         chmod +x ./scripts/InstallChrome.sh
         ./scripts/InstallChrome.sh
+    - name: Run migrations
+      run: python manage.py migrate
     - name: Run Tests
       run: |
         pytest -m functest
