--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -10,6 +10,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      SECRET_KEY: aljsdklfjalsfjlkasdfjlajsldjflajslkdfj
     services:
       postgres:
         image: postgres:10.8
